# DataBricks-Project-Showcase

./: .gitignore  README.md  databricks.yml  pyproject.toml
resources/: HousePricePredictor.yml
showcase/HousePricePrediction/data_preprocessing/: DataPreProcessingHousePricePredictor.py  read.json  write.json
showcase/HousePricePrediction/features/: HousePricePredictor.py  read.json
showcase/HousePricePrediction/model/: HousePricePredictor.py
showcase/HousePricePrediction/output_data/ames_housing_pre_processed/: .part-00000-632cd0db-b63e-48e7-a989-6fd863deba41-c000.snappy.parquet.crc  .part-00000-940095e7-fe7c-4bce-8608-67043ca55826-c000.snappy.parquet.crc  .part-00000-99aecca7-8e8e-4fce-a8d0-6a7d8efdd720-c000.snappy.parquet.crc  .part-00000-c2c3a12d-322d-4d27-91ad-faa1381a54d1-c000.snappy.parquet.crc  .part-00000-e360e05b-b181-4e79-8635-96d0816c7795-c000.snappy.parquet.crc  part-00000-632cd0db-b63e-48e7-a989-6fd863deba41-c000.snappy.parquet  part-00000-940095e7-fe7c-4bce-8608-67043ca55826-c000.snappy.parquet  part-00000-99aecca7-8e8e-4fce-a8d0-6a7d8efdd720-c000.snappy.parquet  part-00000-c2c3a12d-322d-4d27-91ad-faa1381a54d1-c000.snappy.parquet  part-00000-e360e05b-b181-4e79-8635-96d0816c7795-c000.snappy.parquet
showcase/main/: EntryPoint.py  main_notebook.ipynb
showcase/utils/: CentralArgs.py  constants.py  helpers.py  mlflow.py
