[tool.poetry]
name = "showcase"
version = "0.1.0"
description = ""
authors = ["Aravinth Kalaiselvan <arvindk2505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pyspark = "^3.5.2"
hydra-core = "^1.3.2"
black = "^24.8.0"
mlflow = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
